<resources>
    <string name="app_name">BuildBuddy</string>
    <string-array name="District">
        <item>None</item>
        <item>Colombo</item>
        <item>Gampaha</item>
        <item>Kaluthara</item>
        <item>Galle</item>
        <item>Mathara</item>
        <item>Galle</item>
        <item>Mathara</item>
        <item>Hambanthota</item>
        <item>Ampara</item>
        <item>Nuwara</item>
    </string-array>
    <string-array name="Job">
        <item>None</item>
        <item>Carpenter</item>
        <item>Plumber</item>
        <item>Meson</item>
        <item>Electrician</item>
        <item>Welder</item>
        <item>Architect</item>
        <item>Estimeter</item>
        <item>Supplier</item>
    </string-array>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="rePassword">Re-Password</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="update">UPDATE PROFILE</string>
    <string name="fullName">Full Name</string>
    <string name="district">District</string>
    <string name="jobType">Job Type</string>
    <string name="name">Name</string>
    <string name="occupation">Occupation</string>
    <string name="charges">Charges</string>
    <string name="contact">Contact</string>
    <string name="aboutMe">Description</string>
    <string name="itemBtn">View Item</string>
    <string name="map_content_description">User\'s Location on Map</string>
    <string name="supplier">Supplier</string>
    <string name="greenBuilding">Green Building</string>
    <string name="tender">Tender</string>
    <string name="carpenter">Carpenter</string>
    <string name="meson">Meson</string>
    <string name="plumber">Plumber</string>
    <string name="Electrician">Electrician</string>
    <string name="painter">Painter</string>
    <string name="estimater">Estimater</string>
    <string name="welder">Welder</string>
    <string name="architect">Architect</string>
    <string name="news_a">aaaaaaaaaacccccccccccccccccccccccccccccccccccccccccjjjjjjjjjjjjjjjjjjllllllll
    hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk</string>
    <string name="news_concrete">Green concrete, also known as eco-friendly or sustainable concrete, is a revolutionary construction material designed with a strong focus on reducing its environmental impact. It achieves this by using alternative and recycled materials, such as industrial byproducts like fly ash, slag, and silica fume, which help reduce the consumption of traditional cement. Additionally, green concrete often incorporates recycled aggregates like crushed concrete or glass, reducing the demand for natural resources. Its production typically results in lower carbon emissions, making it more environmentally responsible.
        Green concrete not only contributes to sustainability but also offers comparable or even enhanced durability and performance compared to traditional concrete. With the construction industry is growing emphasis on sustainability, green concrete is playing a pivotal role in reducing its ecological footprint and promoting a greener and more sustainable future.</string>
    <string name="news_carpet">Natural fiber carpets offer a sustainable and environmentally friendly flooring option for those seeking a harmonious blend of style and eco-consciousness. Crafted from renewable plant-based materials like sisal, seagrass, jute, and coir, these carpets are biodegradable, ensuring minimal environmental impact.
        Beyond their eco-credentials, natural fiber carpets exude a unique, earthy aesthetic, providing a warm and organic ambiance to any space. While they may not be as plush as synthetic counterparts, their durability and resistance to wear and tear make them an excellent choice for high-traffic areas. With their low VOC (volatile organic compound) emissions, natural fiber carpets also contribute to better indoor air quality. Whether you are seeking a sustainable design statement or a healthier home environment, natural fiber carpets are a compelling choice, merging style, eco-responsibility, and practicality.</string>
    <string name="news_bamboo">Bamboo flooring is a remarkable and sustainable alternative to traditional hardwood flooring. It is created from bamboo grass, one of the fastest-growing plants on Earth, which makes it an eco-friendly choice. Bamboo is rapid growth ensures a readily available and renewable source of material for flooring. Beyond its green credentials, bamboo flooring offers durability, strength, and a unique, elegant appearance.
        It is also easy to maintain and resistant to moisture, making it suitable for various spaces, including kitchens and bathrooms. Its natural beauty and variety of styles, from light to dark shades, make it a versatile choice for both modern and traditional home designs. For those seeking a combination of aesthetics and environmental responsibility, bamboo flooring stands as a compelling option, offering the warmth and appeal of hardwood while minimizing its ecological footprint.</string>
    <string name="news_metal">Recycled metal, an integral part of the metal industrys circular economy, embodies sustainability and environmental responsibility. It comprises metals that have been used, discarded, and then collected for processing and reuse, minimizing the environmental footprint associated with metal production.
        The benefits of recycling metal are manifold, from reducing energy consumption and greenhouse gas emissions to conserving precious natural resources. Collected from various sources and meticulously sorted, recycled metal undergoes purification and transformation, ultimately finding its way into an array of new products.
        This process not only contributes to environmental conservation but also fuels economic growth and job creation while stabilizing metal prices. It is a global effort with local impact, encouraging consumer participation and regulatory support to further its reach and benefits. Recycled metal epitomizes the sustainable and eco-conscious future of the metal industry.</string>
    <string name="news_solar">Solar panels, also known as photovoltaic panels, are essential components of solar energy systems, converting sunlight into electricity through the photovoltaic effect. Comprising interconnected solar cells, these panels capture solar photons, generating a direct current (DC) electrical flow. Solar energy is a clean and renewable source, making it an eco-friendly solution for powering homes, businesses, and more.
        Solar panels come with inverters to convert DC electricity into usable alternating current (AC), and they can be mounted on rooftops or structures with precise orientation for maximum efficiency. Beyond environmental benefits, solar panels offer economic advantages, reducing energy bills and enabling excess power to be sold back to the grid. They require minimal maintenance and often come with government incentives, supporting their widespread adoption. As technology advances, solar panels continue to drive the global shift towards cleaner and more sustainable energy sources, contributing to a greener and more energy-efficient future.</string>
    <string name="news_fencing">Recycled plastic fencing posts are an eco-friendly and sustainable choice for outdoor fencing solutions. These posts, made from materials like recycled high-density polyethylene (HDPE) or polyvinyl chloride (PVC), not only reduce the demand for new plastic production but also contribute to minimizing plastic waste in landfills. Their durability and resistance to rot, moisture, and insects make them a low-maintenance option, as they do not require treatments or paint.
        Recycled plastic posts can withstand harsh weather conditions, and their variety of styles and colors offer aesthetic flexibility. Although the initial cost may be higher, their long-term durability and minimal maintenance requirements make them a cost-effective and environmentally responsible choice, helping to reduce the carbon footprint of outdoor construction projects. Additionally, these posts are often recyclable at the end of their lifecycle, making them a truly sustainable fencing option.</string>
    <string name="news_bottle">Recycled plastic bottles find innovative and eco-friendly applications in building and construction, contributing to sustainable and environmentally responsible practices. One of the most common uses is in the creation of "bottle bricks" or "eco-bricks," where plastic bottles are tightly packed with non-biodegradable waste, serving as a building block. Here is a paragraph outlining the usage of recycled plastic bottles in construction:
        "In building and construction, recycled plastic bottles are ingeniously repurposed as building blocks, often referred to as 'bottle bricks' or 'eco-bricks.' These bottles are densely packed with non-biodegradable waste, such as plastic wrappers or packaging materials, creating sturdy and sustainable construction materials. These bottle bricks are used for various purposes, including constructing walls, partitions, and even entire structures.
        They not only provide an eco-friendly solution for disposing of plastic waste but also offer an affordable and durable building material. This approach not only reduces the environmental impact of construction but also promotes the reuse of waste materials, making it a notable example of sustainability in the construction industry."</string>
    <string name="news_wood">Sustainable wood, often referred to as eco-friendly or green wood, plays a pivotal role in promoting responsible forestry practices and environmentally conscious construction. This type of wood is sourced from well-managed forests and carries certifications from organizations like the Forest Stewardship Council (FSC) and the Sustainable Forestry Initiative (SFI). Here is a paragraph about sustainable wood:
        "Sustainable wood stands as a beacon of responsible resource management in the timber industry. It comes from forests where trees are carefully harvested to ensure the long-term health of the ecosystem. Certified by organizations such as the Forest Stewardship Council (FSC), sustainable wood guarantees that the forests are managed sustainably, respecting biodiversity, local communities, and the environment.
        By choosing sustainable wood, we not only support the preservation of our precious forests but also promote eco-conscious construction and manufacturing. This renewable resource embodies the essence of sustainability, offering an eco-friendly alternative that maintains the delicate balance between human needs and nature iss vitality, ensuring that the legacy of our forests endures for generations to come."
</string>
    <string name="news_energy">Energy efficiency is a pivotal concept in todays world, focusing on using less energy to accomplish the same tasks or achieve higher levels of performance. It plays a central role in reducing greenhouse gas emissions, lowering energy bills, and enhancing energy security. Energy-efficient technologies and practices encompass a wide range of applications, from energy-efficient appliances and lighting to well-insulated buildings and optimized industrial processes.
        By embracing energy efficiency, individuals, businesses, and governments can make a significant impact on sustainability, promoting a cleaner environment and more affordable energy consumption. Its a win-win solution that not only conserves precious resources but also fosters innovation and economic growth while addressing the pressing global challenges of climate change and energy sustainability.</string>
</resources>