<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center|center_horizontal|center_vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:contentDescription="profile photo"
                android:scaleType="centerCrop"
                android:src="@drawable/profile_photo"
                app:civ_border_width="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/profileName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/name"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/charges"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:text="@string/charges"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/profileContact"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:text="@string/contact"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/aboutMe"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:text="@string/aboutMe"
                android:textSize="16sp" />

            <!-- ... Previous layout content ... -->

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:clickable="true"
                android:contentDescription="@string/map_content_description"
                android:enabled="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                app:layout_constraintTop_toBottomOf="@id/aboutMe"
                app:liteMode="false" />


            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:numStars="5"
                android:stepSize="0.1"
                android:rating="0.0" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>