<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="296dp"
                android:orientation="vertical"
                android:padding="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/updateName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/edittext_background"
                    android:ems="10"
                    android:hint="Enter Your Email"
                    android:inputType="textPersonName"
                    android:padding="12dp"
                    android:textColor="#707070"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:ems="10"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/updateEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/edittext_background"
                    android:ems="10"
                    android:hint="Enter Your Password"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:textColor="#707070"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="30dp"
                    android:background="@drawable/button_background"
                    android:text="@string/login"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Don't have an account ?"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/btnRegister"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="30dp"
                        android:background="@drawable/button_background"
                        android:text="@string/register"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>